fixed log in jumping down on small screens

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -349,11 +349,3 @@ footer .navRightItems li:nth-child(4) > a {
   }
 
 }
-/* login inline-block again*/
-
-@media only screen and (max-width: 576px) {
-  .mobileMenuPopup ul li:nth-child(5) {
-    display: inline-block;
-    padding: .5rem  1.7rem ;
-  }
-}
